--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-10-06 16:37+0200\n"
+"POT-Creation-Date: 2023-10-11 11:25+0200\n"
 "PO-Revision-Date: 2023-10-02 16:44+0300\n"
 "Last-Translator: Joe Smallwood <joe.smallwood@kausal.tech>\n"
 "Language-Team: Finnish <https://weblate.kausal.tech/projects/watch/django/fi/>\n"
@@ -735,7 +735,7 @@ msgstr "Virallisen tahon hyväksymä nimi"
 msgid "The identifier for this action (e.g. number)"
 msgstr "Toimenpiteen tunniste (esim. numero)"
 
-#: actions/models/action.py
+#: actions/models/action.py pages/blocks.py
 msgid "Image"
 msgstr "Kuva"
 
@@ -1872,8 +1872,16 @@ msgid "No user found with this email address. Ask your administrator to create a
 msgstr "Tällä sähköpostiosoitteella ei löytynyt käyttäjää. Pyydä ylläpitäjää luomaan sinulle käyttäjätili."
 
 #: admin_site/api.py
-msgid "This user does not have access to admin."
-msgstr "Tällä käyttäjällä ei ole pääsyä ylläpitoon."
+msgid "You do not have admin access. Your administrator may need to assign you an action or indicator, or grant you plan admin status."
+msgstr ""
+
+#: admin_site/api.py
+msgid "Cannot determine authorization method. The email address domain may be unknown."
+msgstr ""
+
+#: admin_site/api.py
+msgid "Password authentication is required, but the user has no password."
+msgstr ""
 
 #: admin_site/chooser.py
 msgid "What is the part after @ in the staff email address of the organization mainly responsible for the plan?"
@@ -3522,8 +3530,44 @@ msgid "Front page hero block"
 msgstr "Etusivun nosto"
 
 #: pages/blocks.py
+#, fuzzy
+#| msgid "action link"
+msgid "Page link"
+msgstr "ulkopuolinen linkki"
+
+#: pages/blocks.py
+#, fuzzy
+#| msgid "Cards"
+msgid "Card"
+msgstr "Kortit"
+
+#: pages/blocks.py
+#, fuzzy
+#| msgid "Action category"
+msgid "Action category filter card"
+msgstr "Toimenpiteen luokka"
+
+#: pages/blocks.py
 msgid "Links"
 msgstr "Linkit"
+
+#: pages/blocks.py
+#, fuzzy
+#| msgid "Action category"
+msgid "Action category filter cards"
+msgstr "Toimenpiteen luokka"
+
+#: pages/blocks.py
+#, fuzzy
+#| msgid "Accessibility statement pages"
+msgid "Accessibility statement compliance status"
+msgstr "Saavutettavuusselostesivut"
+
+#: pages/blocks.py
+#, fuzzy
+#| msgid "Accessibility statement page"
+msgid "Accessibility statement preparation information"
+msgstr "Saavutettavuusselostesivu"
 
 #: pages/blocks.py
 msgid "Publisher name"
@@ -3542,8 +3586,42 @@ msgid "Email address"
 msgstr "Sähköpostiosoite"
 
 #: pages/blocks.py
+#, fuzzy
+#| msgid "Accessibility statement page"
+msgid "Accessibility statement contact information"
+msgstr "Saavutettavuusselostesivu"
+
+#: pages/blocks.py
+#, fuzzy
+#| msgid "Accessibility statement page"
+msgid "Accessibility statement contact form"
+msgstr "Saavutettavuusselostesivu"
+
+#: pages/blocks.py
 msgid "Action status pie charts"
 msgstr "Ympyräkaaviot toimenpiteiden tilanteesta"
+
+#: pages/blocks.py
+msgid "Width"
+msgstr ""
+
+#: pages/blocks.py
+#, fuzzy
+#| msgid "maximum value"
+msgid "Maximum"
+msgstr "maksimiarvo"
+
+#: pages/blocks.py
+#, fuzzy
+#| msgid "in side column"
+msgid "Fit to column"
+msgstr "sivupalstalla"
+
+#: pages/blocks.py
+#, fuzzy
+#| msgid "Big image"
+msgid "Large image"
+msgstr "Iso kuva"
 
 #: pages/models.py
 msgid "show in footer"
@@ -4209,6 +4287,9 @@ msgstr "Käyttäjät"
 #: users/models.py
 msgid "No permission to remove the user belonging to plans you are not managing."
 msgstr "Ei oikeuksia poistaa käyttäjä joka kuuluu toimenpideohjelmiin, joita et hallinnoi."
+
+#~ msgid "This user does not have access to admin."
+#~ msgstr "Tällä käyttäjällä ei ole pääsyä ylläpitoon."
 
 #~ msgid "Show only organizations in active plan"
 #~ msgstr "Näytä vain valitun toimenpideohjelman organisaatiot"
