--- a/locale/sv/LC_MESSAGES/django.po
+++ b/locale/sv/LC_MESSAGES/django.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-10-06 16:37+0200\n"
+"POT-Creation-Date: 2023-10-11 11:25+0200\n"
 "PO-Revision-Date: 2023-09-15 10:18+0000\n"
 "Last-Translator: Ida Sihvonen <ida.sihvonen@kausal.tech>\n"
 "Language-Team: Swedish <https://weblate.kausal.tech/projects/watch/django/sv/>\n"
@@ -752,7 +752,7 @@ msgstr "Namnet som godkänt av en officiell part"
 msgid "The identifier for this action (e.g. number)"
 msgstr "Identifieraren för denna åtgärd (t.ex. nummer)"
 
-#: actions/models/action.py
+#: actions/models/action.py pages/blocks.py
 msgid "Image"
 msgstr "Bild"
 
@@ -1995,8 +1995,16 @@ msgid "No user found with this email address. Ask your administrator to create a
 msgstr "Ingen användare hittades med den här e-postadressen. Be din administratör att skapa ett konto åt dig."
 
 #: admin_site/api.py
-msgid "This user does not have access to admin."
-msgstr "Denna användare har inte tillgång till admin."
+msgid "You do not have admin access. Your administrator may need to assign you an action or indicator, or grant you plan admin status."
+msgstr ""
+
+#: admin_site/api.py
+msgid "Cannot determine authorization method. The email address domain may be unknown."
+msgstr ""
+
+#: admin_site/api.py
+msgid "Password authentication is required, but the user has no password."
+msgstr ""
 
 #: admin_site/chooser.py
 msgid "What is the part after @ in the staff email address of the organization mainly responsible for the plan?"
@@ -3718,8 +3726,44 @@ msgid "Front page hero block"
 msgstr "Framsida hjälte block"
 
 #: pages/blocks.py
+#, fuzzy
+#| msgid "action link"
+msgid "Page link"
+msgstr "åtgärdslänk"
+
+#: pages/blocks.py
+#, fuzzy
+#| msgid "Cards"
+msgid "Card"
+msgstr "Kort"
+
+#: pages/blocks.py
+#, fuzzy
+#| msgid "common indicator"
+msgid "Action category filter card"
+msgstr "gemensam indikator"
+
+#: pages/blocks.py
 msgid "Links"
 msgstr "Länkar"
+
+#: pages/blocks.py
+#, fuzzy
+#| msgid "common indicator"
+msgid "Action category filter cards"
+msgstr "gemensam indikator"
+
+#: pages/blocks.py
+#, fuzzy
+#| msgid "URL to accessibility statement"
+msgid "Accessibility statement compliance status"
+msgstr "URL till tillgänglighetsuttalande"
+
+#: pages/blocks.py
+#, fuzzy
+#| msgid "URL to accessibility statement"
+msgid "Accessibility statement preparation information"
+msgstr "URL till tillgänglighetsuttalande"
 
 #: pages/blocks.py
 #, fuzzy
@@ -3745,9 +3789,43 @@ msgstr "e-postadress"
 
 #: pages/blocks.py
 #, fuzzy
+#| msgid "URL to accessibility statement"
+msgid "Accessibility statement contact information"
+msgstr "URL till tillgänglighetsuttalande"
+
+#: pages/blocks.py
+#, fuzzy
+#| msgid "URL to accessibility statement"
+msgid "Accessibility statement contact form"
+msgstr "URL till tillgänglighetsuttalande"
+
+#: pages/blocks.py
+#, fuzzy
 #| msgid "Action statuses"
 msgid "Action status pie charts"
 msgstr "Åtgärdsstatus"
+
+#: pages/blocks.py
+msgid "Width"
+msgstr ""
+
+#: pages/blocks.py
+#, fuzzy
+#| msgid "maximum value"
+msgid "Maximum"
+msgstr "maximalt värde"
+
+#: pages/blocks.py
+#, fuzzy
+#| msgid "in side column"
+msgid "Fit to column"
+msgstr "i sidokolumn"
+
+#: pages/blocks.py
+#, fuzzy
+#| msgid "Big image"
+msgid "Large image"
+msgstr "Stor bild"
 
 #: pages/models.py
 msgid "show in footer"
@@ -4489,6 +4567,9 @@ msgstr "Användare"
 #: users/models.py
 msgid "No permission to remove the user belonging to plans you are not managing."
 msgstr "Inget tillstånd att ta bort användaren som tillhör planer som du inte hanterar."
+
+#~ msgid "This user does not have access to admin."
+#~ msgstr "Denna användare har inte tillgång till admin."
 
 #~ msgid "Show only organizations in active plan"
 #~ msgstr "Visa endast organisationer i aktiv plan"
