Update translation source strings

--- a/locale/da/LC_MESSAGES/django.po
+++ b/locale/da/LC_MESSAGES/django.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-10-11 11:25+0200\n"
+"POT-Creation-Date: 2023-10-11 11:51+0200\n"
 "PO-Revision-Date: 2023-09-15 10:18+0000\n"
 "Last-Translator: Ida Sihvonen <ida.sihvonen@kausal.tech>\n"
 "Language-Team: Danish <https://weblate.kausal.tech/projects/watch/django/da/>\n"
@@ -1910,7 +1910,7 @@ msgid "You do not have admin access. Your administrator may need to assign you a
 msgstr ""
 
 #: admin_site/api.py
-msgid "Cannot determine authorization method. The email address domain may be unknown."
+msgid "Cannot determine authentication method. The email address domain may be unknown."
 msgstr ""
 
 #: admin_site/api.py
