--- a/locale/de_CH/LC_MESSAGES/django.po
+++ b/locale/de_CH/LC_MESSAGES/django.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-10-11 11:25+0200\n"
+"POT-Creation-Date: 2023-10-11 11:51+0200\n"
 "PO-Revision-Date: 2023-07-28 10:27+0000\n"
 "Last-Translator: Bernhard Bliem, 2023\n"
 "Language-Team: German (Switzerland) (https://app.transifex.com/kausal-tech/teams/173102/de_CH/)\n"
@@ -1833,7 +1833,7 @@ msgid "You do not have admin access. Your administrator may need to assign you a
 msgstr ""
 
 #: admin_site/api.py
-msgid "Cannot determine authorization method. The email address domain may be unknown."
+msgid "Cannot determine authentication method. The email address domain may be unknown."
 msgstr ""
 
 #: admin_site/api.py
