--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -3878,10 +3878,8 @@ msgid "For an action"
 msgstr "Für eine Maßnahme"
 
 #: people/wagtail_admin.py
-#, fuzzy
-#| msgid "action indicators"
 msgid "For same actions or indicators as me"
-msgstr "Maßnahmenindikatoren"
+msgstr "Für die gleichen Maßnahmen oder Indikatoren wie ich"
 
 #: people/wagtail_admin.py
 msgid "For an indicator"
