--- a/locale/da/LC_MESSAGES/django.po
+++ b/locale/da/LC_MESSAGES/django.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-11-10 00:49+0100\n"
+"POT-Creation-Date: 2023-11-10 00:57+0100\n"
 "PO-Revision-Date: 2023-09-15 10:18+0000\n"
 "Last-Translator: Ida Sihvonen <ida.sihvonen@kausal.tech>\n"
 "Language-Team: Danish <https://weblate.kausal.tech/projects/watch/django/da/>\n"
@@ -1258,7 +1258,9 @@ msgid "fields"
 msgstr "felter"
 
 #: actions/models/attributes.py
-msgid "Unit must only be used for numeric attribute types"
+#, fuzzy
+#| msgid "Unit must only be used for numeric attribute types"
+msgid "Unit must only be used for numeric fields"
 msgstr "Enhed må kun bruges til numeriske attributtyper"
 
 #: actions/models/attributes.py
@@ -1268,7 +1270,7 @@ msgstr "Hvis der ikke er angivet et primært sprog, må der ikke være andre spr
 #: actions/models/attributes.py
 #, fuzzy
 #| msgid "Unit must only be used for numeric attribute types"
-msgid "This value is only allowed for action attribute types"
+msgid "This value is only allowed for action fields"
 msgstr "Enhed må kun bruges til numeriske attributtyper"
 
 #: actions/models/attributes.py
