--- a/locale/django.pot
+++ b/locale/django.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-11-10 00:49+0100\n"
+"POT-Creation-Date: 2023-11-10 00:57+0100\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -1177,7 +1177,7 @@ msgid "fields"
 msgstr ""
 
 #: actions/models/attributes.py
-msgid "Unit must only be used for numeric attribute types"
+msgid "Unit must only be used for numeric fields"
 msgstr ""
 
 #: actions/models/attributes.py
@@ -1185,7 +1185,7 @@ msgid "If no primary language is set, there must not be other languages"
 msgstr ""
 
 #: actions/models/attributes.py
-msgid "This value is only allowed for action attribute types"
+msgid "This value is only allowed for action fields"
 msgstr ""
 
 #: actions/models/attributes.py
