--- a/locale/de/LC_MESSAGES/django.po
+++ b/locale/de/LC_MESSAGES/django.po
@@ -10,11 +10,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-11-10 00:57+0100\n"
+"POT-Creation-Date: 2023-11-10 09:09+0200\n"
 "PO-Revision-Date: 2023-11-10 00:01+0000\n"
 "Last-Translator: Bernhard Bliem <bernhard.bliem@kausal.tech>\n"
-"Language-Team: German <https://weblate.kausal.tech/projects/watch/django/de/>"
-"\n"
+"Language-Team: German <https://weblate.kausal.tech/projects/watch/django/de/>\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -27,9 +26,15 @@ msgid "There is already an action with this identifier."
 msgstr "Es gibt bereits eine Maßnahme mit dieser Kennung."
 
 #: actions/action_admin.py
-#, python-format
-msgid "%s is listed multiple times as a contact person."
+#, fuzzy, python-format
+#| msgid "%s is listed multiple times as a contact person."
+msgid "%s is listed multiple times in the action."
 msgstr "%s tritt mehrfach als Ansprechpartner*in auf."
+
+#: actions/action_admin.py actions/api.py actions/blocks/action_content.py
+#: actions/blocks/action_dashboard.py
+msgid "Responsible parties"
+msgstr "Zuständige Stellen"
 
 #: actions/action_admin.py actions/api.py aplans/utils.py
 #: indicators/wagtail_admin.py
@@ -86,11 +91,6 @@ msgstr "Grunddaten"
 #: indicators/blocks.py
 msgid "Progress"
 msgstr "Fortschritt"
-
-#: actions/action_admin.py actions/api.py actions/blocks/action_content.py
-#: actions/blocks/action_dashboard.py
-msgid "Responsible parties"
-msgstr "Zuständige Stellen"
 
 #: actions/action_admin.py
 msgid "Reporting"
