--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-11-10 00:57+0100\n"
+"POT-Creation-Date: 2023-11-10 09:09+0200\n"
 "PO-Revision-Date: 2023-10-02 16:44+0300\n"
 "Last-Translator: Joe Smallwood <joe.smallwood@kausal.tech>\n"
 "Language-Team: Finnish <https://weblate.kausal.tech/projects/watch/django/fi/>\n"
@@ -29,8 +29,13 @@ msgstr "Tällä tunnisteella on jo toimenpide."
 #: actions/action_admin.py
 #, fuzzy, python-format
 #| msgid "Organization occurs multiple times as responsible party"
-msgid "%s is listed multiple times as a contact person."
+msgid "%s is listed multiple times in the action."
 msgstr "Sama organisaatio toistuu vastuutahona"
+
+#: actions/action_admin.py actions/api.py actions/blocks/action_content.py
+#: actions/blocks/action_dashboard.py
+msgid "Responsible parties"
+msgstr "Toimenpiteen vastuutahot"
 
 #: actions/action_admin.py actions/api.py aplans/utils.py
 #: indicators/wagtail_admin.py
@@ -87,11 +92,6 @@ msgstr "Perustiedot"
 #: indicators/blocks.py
 msgid "Progress"
 msgstr "Eteneminen"
-
-#: actions/action_admin.py actions/api.py actions/blocks/action_content.py
-#: actions/blocks/action_dashboard.py
-msgid "Responsible parties"
-msgstr "Toimenpiteen vastuutahot"
 
 #: actions/action_admin.py
 msgid "Reporting"
