--- a/locale/sv/LC_MESSAGES/django.po
+++ b/locale/sv/LC_MESSAGES/django.po
@@ -10,7 +10,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-11-10 00:57+0100\n"
+"POT-Creation-Date: 2023-11-10 09:09+0200\n"
 "PO-Revision-Date: 2023-09-15 10:18+0000\n"
 "Last-Translator: Ida Sihvonen <ida.sihvonen@kausal.tech>\n"
 "Language-Team: Swedish <https://weblate.kausal.tech/projects/watch/django/sv/>\n"
@@ -28,8 +28,13 @@ msgstr "Det finns redan en handling med denna identifieraren."
 #: actions/action_admin.py
 #, fuzzy, python-format
 #| msgid "Organization occurs multiple times as responsible party"
-msgid "%s is listed multiple times as a contact person."
+msgid "%s is listed multiple times in the action."
 msgstr "Organisation förekommer flera gånger som ansvarig part"
+
+#: actions/action_admin.py actions/api.py actions/blocks/action_content.py
+#: actions/blocks/action_dashboard.py
+msgid "Responsible parties"
+msgstr "Ansvariga parter"
 
 #: actions/action_admin.py actions/api.py aplans/utils.py
 #: indicators/wagtail_admin.py
@@ -86,11 +91,6 @@ msgstr "Grundläggande information"
 #: indicators/blocks.py
 msgid "Progress"
 msgstr "Framsteg"
-
-#: actions/action_admin.py actions/api.py actions/blocks/action_content.py
-#: actions/blocks/action_dashboard.py
-msgid "Responsible parties"
-msgstr "Ansvariga parter"
 
 #: actions/action_admin.py
 msgid "Reporting"
