--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -11,11 +11,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-05 08:42+0200\n"
+"POT-Creation-Date: 2023-12-15 15:38+0200\n"
 "PO-Revision-Date: 2023-12-05 07:24+0000\n"
 "Last-Translator: Timo Tuominen <timo.tuominen@kausal.tech>\n"
-"Language-Team: Finnish <https://weblate.kausal.tech/projects/watch/django/fi/"
-">\n"
+"Language-Team: Finnish <https://weblate.kausal.tech/projects/watch/django/fi/>\n"
 "Language: fi\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -63,10 +62,6 @@ msgstr "Peru valmiiksi merkitseminen raporttia %s varten"
 msgid "Undo marking this action as complete for the report %s"
 msgstr "Peru tämän toimenpiteen valmiiksi merkitseminen raporttia %s varten"
 
-#: actions/action_admin.py actions/wagtail_admin.py
-msgid "External links"
-msgstr "Ulkopuoliset linkit"
-
 #: actions/action_admin.py
 msgid "Last updated"
 msgstr "Viimeksi päivitetty"
@@ -83,6 +78,10 @@ msgstr "Nimi"
 msgid "Categories"
 msgstr "Luokat"
 
+#: actions/action_admin.py actions/wagtail_admin.py
+msgid "External links"
+msgstr "Ulkopuoliset linkit"
+
 #: actions/action_admin.py actions/category_admin.py actions/wagtail_admin.py
 #: indicators/wagtail_admin.py notifications/wagtail_admin.py
 #: orgs/wagtail_admin.py
@@ -93,6 +92,10 @@ msgstr "Perustiedot"
 #: indicators/blocks.py
 msgid "Progress"
 msgstr "Eteneminen"
+
+#: actions/action_admin.py actions/models/action.py
+msgid "internal notes for plan administrators"
+msgstr "sisäiset muistiinpanot pääkäyttäjille"
 
 #: actions/action_admin.py
 msgid "Reporting"
@@ -130,9 +133,7 @@ msgstr "%(model_name)s '%(object)s' poistettu."
 #: actions/action_admin_mixins.py
 #, python-format
 msgid "%(model_name)s '%(object)s' is live and this version has been scheduled for publishing."
-msgstr ""
-"%(model_name)s '%(object)s' on jo julkinen ja tämä versio on ajastettu "
-"julkaistavaksi."
+msgstr "%(model_name)s '%(object)s' on jo julkinen ja tämä versio on ajastettu julkaistavaksi."
 
 #: actions/action_admin_mixins.py
 #, fuzzy, python-format
@@ -316,6 +317,10 @@ msgstr "Jos muoto on \"luokka\", luokan tyyppi on valittava"
 #: actions/attribute_type_admin.py
 msgid "If format is 'Numeric', a unit must be set"
 msgstr "Jos muoto on 'numeerinen', yksikkö vaaditaan"
+
+#: actions/attribute_type_admin.py
+msgid "This field already has values. If you want to change the format, you need to delete the existing values first."
+msgstr ""
 
 #: actions/attribute_type_admin.py
 #, fuzzy
@@ -765,10 +770,6 @@ msgstr "Toimenpiteen vaikuttavuus"
 #: actions/models/action.py
 msgid "internal priority"
 msgstr "sisäinen prioriteetti"
-
-#: actions/models/action.py
-msgid "internal notes for plan administrators"
-msgstr "sisäiset muistiinpanot pääkäyttäjille"
 
 #: actions/models/action.py
 msgid "internal notes"
@@ -1473,9 +1474,7 @@ msgstr "toimenpiteen yhteyshenkilöt"
 
 #: actions/models/features.py
 msgid "Set if there are separate contact persons with publishing rights and others who can only suggest changes"
-msgstr ""
-"Aseta jos käytössä on yhteyshenkilöroolit, eli toisilla yhteyshenkilöillä on "
-"julkaisuoikeudet mutta toiset voivat vain ehdottaa muutoksia"
+msgstr "Aseta jos käytössä on yhteyshenkilöroolit, eli toisilla yhteyshenkilöillä on julkaisuoikeudet mutta toiset voivat vain ehdottaa muutoksia"
 
 #: actions/models/features.py
 msgid "Minimal statuses"
@@ -1532,6 +1531,14 @@ msgstr "Ota moderointi käyttöön"
 #: actions/models/features.py
 msgid "Set to enable drafting and reviewing functionality"
 msgstr "Aseta ottaaksesi käyttöön luonnostelu- ja katselmointitoiminnot"
+
+#: actions/models/features.py
+msgid "Display field visibility as a label in edit views"
+msgstr ""
+
+#: actions/models/features.py
+msgid "For plans which have field-specific visibility restrictions, show to users which fields are public and which are restricted."
+msgstr ""
 
 #: actions/models/features.py
 msgid "plan feature"
@@ -1855,9 +1862,7 @@ msgstr "pääkäyttäjät"
 
 #: actions/wagtail_admin.py
 msgid "Only set if explicitly required by customer. Use a color key from the UI theme's graphColors, for example red070 or grey030."
-msgstr ""
-"Aseta ainoastaan jos asiakas erikseen pyytää. Käytä väriavainta UI-teeman "
-"graphColors -arvoista, esimerkiksi red070 tai grey030."
+msgstr "Aseta ainoastaan jos asiakas erikseen pyytää. Käytä väriavainta UI-teeman graphColors -arvoista, esimerkiksi red070 tai grey030."
 
 #: actions/wagtail_admin.py
 msgid "Clients"
@@ -1905,16 +1910,11 @@ msgstr "Tällä sähköpostiosoitteella ei löytynyt käyttäjää. Pyydä yllä
 
 #: admin_site/api.py
 msgid "You do not have admin access. Your administrator may need to assign you an action or indicator, or grant you plan admin status."
-msgstr ""
-"Sinulla ei ole pääsyä ylläpitoon. Järjestelmänvalvojan on ehkä tehtävä "
-"sinusta yhteyshenkilö tai myönnettävä sinulle toimenpideohjelman ylläpitäjän "
-"asema."
+msgstr "Sinulla ei ole pääsyä ylläpitoon. Järjestelmänvalvojan on ehkä tehtävä sinusta yhteyshenkilö tai myönnettävä sinulle toimenpideohjelman ylläpitäjän asema."
 
 #: admin_site/api.py
 msgid "Cannot determine authentication method. The email address domain may be unknown."
-msgstr ""
-"Kirjautumistapaa ei saatu selville. Sähköpostiosoitteen loppuosa saattaa "
-"olla tuntematon."
+msgstr "Kirjautumistapaa ei saatu selville. Sähköpostiosoitteen loppuosa saattaa olla tuntematon."
 
 #: admin_site/api.py
 msgid "Password authentication is required, but the user has no password."
@@ -1922,9 +1922,7 @@ msgstr "Salasanatodennus vaaditaan, mutta käyttäjällä ei ole salasanaa."
 
 #: admin_site/chooser.py
 msgid "What is the part after @ in the staff email address of the organization mainly responsible for the plan?"
-msgstr ""
-"Mikä on sähköpostiosoitteen @-merkkiä seuraava osa sen organisaation "
-"henkilöstön sähköpostiosoitteissa, joka on päävastuussa toimenpideohjelmasta?"
+msgstr "Mikä on sähköpostiosoitteen @-merkkiä seuraava osa sen organisaation henkilöstön sähköpostiosoitteissa, joka on päävastuussa toimenpideohjelmasta?"
 
 #: admin_site/chooser.py
 #, fuzzy
@@ -2083,6 +2081,18 @@ msgstr "Kirjaudu sisään Kausal Watch -ylläpitoon"
 msgid "Our apologies, the server is temporarily experiencing difficulties."
 msgstr "Pahoittelut, palvelimella on väliaikaisia teknisiä ongelmia."
 
+#: admin_site/utils.py
+#, fuzzy
+#| msgid "Public"
+msgid "Public field"
+msgstr "Julkaistu"
+
+#: admin_site/utils.py
+#, fuzzy
+#| msgid "Public"
+msgid "Non-public field"
+msgstr "Julkaistu"
+
 #: admin_site/views.py
 msgid "Your account settings have been changed successfully!"
 msgstr "Tilisi asetukset muutettiin onnistuneesti!"
@@ -2187,9 +2197,7 @@ msgstr "Kohdetta ei voida poistaa koska muut oliot viittaavat siihen."
 #: aplans/rest_api.py
 #, python-format
 msgid "Cannot delete \"%s\" because it is connected to other objects such as plans, persons or actions."
-msgstr ""
-"Ei voi poistaa \"%s\", koska se liittyy muihin kohteisiin, kuten "
-"suunnitelmiin, henkilöihin tai toimiin."
+msgstr "Ei voi poistaa \"%s\", koska se liittyy muihin kohteisiin, kuten suunnitelmiin, henkilöihin tai toimiin."
 
 #: aplans/settings.py
 msgid "Danish"
@@ -3003,9 +3011,7 @@ msgstr "[ei mukana toimenpideohjelmassa]"
 
 #: indicators/wagtail_admin.py
 msgid "Changing the organization to one with a different primary language is currently not supported"
-msgstr ""
-"Organisaation vaihtaminen toisenkieliseen (ensisijainen kieli) ei ole tällä "
-"hetkellä tuettu"
+msgstr "Organisaation vaihtaminen toisenkieliseen (ensisijainen kieli) ei ole tällä hetkellä tuettu"
 
 #: indicators/wagtail_admin.py
 msgid "Dimensions must be the same as in common indicator"
@@ -4142,24 +4148,17 @@ msgstr "Haluatko varmasti lisätä organisaation '%(org)s' toimenpideohjelmaan '
 #: people/views.py
 #, python-format
 msgid "An email has been sent to %(person)s with a link to reset their password."
-msgstr ""
-"Osoitteeseen %(person)s on lähetetty sähköpostiviesti, jossa on linkki "
-"salasanan palauttamiseen."
+msgstr "Osoitteeseen %(person)s on lähetetty sähköpostiviesti, jossa on linkki salasanan palauttamiseen."
 
 #: people/views.py
 #, python-format
 msgid "If the email does not arrive, you can send them the following link: %(url)s"
-msgstr ""
-"Jos sähköposti ei saavu perille, voit lähettää hänelle seuraavan linkin: "
-"%(url)s"
+msgstr "Jos sähköposti ei saavu perille, voit lähettää hänelle seuraavan linkin: %(url)s"
 
 #: people/views.py
 #, python-format
 msgid "Please take great care that nobody except %(person)s gets access to the link. For additional security, the link will expire in %(days_until_expiration)s days."
-msgstr ""
-"Varmistathan, ettei kukaan muu kuin %(person)s pääse käsiksi linkkiin. "
-"Lisäturvallisuuden vuoksi linkki vanhenee %(days_until_expiration)s päivän "
-"kuluttua."
+msgstr "Varmistathan, ettei kukaan muu kuin %(person)s pääse käsiksi linkkiin. Lisäturvallisuuden vuoksi linkki vanhenee %(days_until_expiration)s päivän kuluttua."
 
 #: people/wagtail_admin.py
 msgid "Is contact person"
@@ -4210,9 +4209,7 @@ msgstr "Haluatko varmasti poistaa käytöstä tämän henkilön?"
 
 #: people/wagtail_admin.py
 msgid "This person has no access to the admin interface. This is commonly because no actions or indicators are assigned to them."
-msgstr ""
-"Tällä henkilöllä ei ole pääsyä ylläpitoon. Tämä johtuu yleensä siitä, ettei "
-"hänelle ole määritetty yhtäkään toimenpidettä tai indikaattoria."
+msgstr "Tällä henkilöllä ei ole pääsyä ylläpitoon. Tämä johtuu yleensä siitä, ettei hänelle ole määritetty yhtäkään toimenpidettä tai indikaattoria."
 
 #: people/wagtail_admin.py
 msgid "last login"
@@ -4484,6 +4481,11 @@ msgstr "Käyttäjät"
 msgid "No permission to remove the user belonging to plans you are not managing."
 msgstr "Ei oikeuksia poistaa käyttäjä joka kuuluu toimenpideohjelmiin, joita et hallinnoi."
 
+#, fuzzy
+#~| msgid "Internal fields"
+#~ msgid "Internal field"
+#~ msgstr "Sisäiset tiedot"
+
 #~ msgid "Admin hostnames"
 #~ msgstr "Ylläpidon palvelinnimet"
 
@@ -4625,9 +4627,6 @@ msgstr "Ei oikeuksia poistaa käyttäjä joka kuuluu toimenpideohjelmiin, joita 
 
 #~ msgid "Completion"
 #~ msgstr "Toteutuminen"
-
-#~ msgid "Internal fields"
-#~ msgstr "Sisäiset tiedot"
 
 #~ msgid "Schedule and decision level"
 #~ msgstr "Aikataulu ja päätöstaso"
