--- a/locale/da/LC_MESSAGES/django.po
+++ b/locale/da/LC_MESSAGES/django.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-15 15:38+0200\n"
+"POT-Creation-Date: 2023-12-20 17:07+0100\n"
 "PO-Revision-Date: 2023-12-13 16:19+0000\n"
 "Last-Translator: Ida Sihvonen <ida.sihvonen@kausal.tech>\n"
 "Language-Team: Danish <https://weblate.kausal.tech/projects/watch/django/da/>\n"
@@ -93,8 +93,16 @@ msgstr "Grundlæggende oplysninger"
 msgid "Progress"
 msgstr "Fremskridt"
 
-#: actions/action_admin.py actions/models/action.py
-msgid "internal notes for plan administrators"
+#: actions/action_admin.py
+#, fuzzy
+#| msgid "internal notes"
+msgid "Internal notes"
+msgstr "interne noter"
+
+#: actions/action_admin.py
+#, fuzzy
+#| msgid "internal notes for plan administrators"
+msgid "Internal notes for plan administrators"
 msgstr "interne notater til planadministratorer"
 
 #: actions/action_admin.py
@@ -786,6 +794,10 @@ msgstr "Indvirkningen af denne handling"
 #: actions/models/action.py
 msgid "internal priority"
 msgstr "intern prioritering"
+
+#: actions/models/action.py
+msgid "internal notes for plan administrators"
+msgstr "interne notater til planadministratorer"
 
 #: actions/models/action.py
 msgid "internal notes"
