--- a/locale/fi/LC_MESSAGES/django.po
+++ b/locale/fi/LC_MESSAGES/django.po
@@ -11,7 +11,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2023-12-15 15:38+0200\n"
+"POT-Creation-Date: 2023-12-20 17:07+0100\n"
 "PO-Revision-Date: 2023-12-05 07:24+0000\n"
 "Last-Translator: Timo Tuominen <timo.tuominen@kausal.tech>\n"
 "Language-Team: Finnish <https://weblate.kausal.tech/projects/watch/django/fi/>\n"
@@ -93,8 +93,16 @@ msgstr "Perustiedot"
 msgid "Progress"
 msgstr "Eteneminen"
 
-#: actions/action_admin.py actions/models/action.py
-msgid "internal notes for plan administrators"
+#: actions/action_admin.py
+#, fuzzy
+#| msgid "internal notes"
+msgid "Internal notes"
+msgstr "sisäiset muistiinpanot"
+
+#: actions/action_admin.py
+#, fuzzy
+#| msgid "internal notes for plan administrators"
+msgid "Internal notes for plan administrators"
 msgstr "sisäiset muistiinpanot pääkäyttäjille"
 
 #: actions/action_admin.py
@@ -770,6 +778,10 @@ msgstr "Toimenpiteen vaikuttavuus"
 #: actions/models/action.py
 msgid "internal priority"
 msgstr "sisäinen prioriteetti"
+
+#: actions/models/action.py
+msgid "internal notes for plan administrators"
+msgstr "sisäiset muistiinpanot pääkäyttäjille"
 
 #: actions/models/action.py
 msgid "internal notes"
