--- a/locale/de_CH/LC_MESSAGES/django.po
+++ b/locale/de_CH/LC_MESSAGES/django.po
@@ -10,11 +10,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-01-17 16:15+0100\n"
+"POT-Creation-Date: 2024-01-19 10:28+0100\n"
 "PO-Revision-Date: 2024-01-18 14:18+0000\n"
 "Last-Translator: Weblate Admin <noreply@mj.kausal.tech>\n"
-"Language-Team: German (Switzerland) <https://weblate.kausal.tech/projects/"
-"watch/django/de_CH/>\n"
+"Language-Team: German (Switzerland) <https://weblate.kausal.tech/projects/watch/django/de_CH/>\n"
 "Language: de_CH\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1416,9 +1415,7 @@ msgstr ""
 
 #: actions/models/features.py
 msgid "Set to prevent showing status-specific graphs and other elements if statuses aren't systematically used in this action plan"
-msgstr ""
-"Setzen, um keine statusabhängigen Diagramme und andere Elemente anzuzeigen, "
-"wenn Status in diesem Massnahmenplan nicht systematisch verwendet werden"
+msgstr "Setzen, um keine statusabhängigen Diagramme und andere Elemente anzuzeigen, wenn Status in diesem Massnahmenplan nicht systematisch verwendet werden"
 
 #: actions/models/features.py
 msgid "Has action official name field"
@@ -1748,24 +1745,30 @@ msgid "monitoring quality points"
 msgstr ""
 
 #: actions/templates/site_summary/actions.html
-#, python-format
+#, fuzzy, python-format
+#| msgid ""
+#| "\n"
+#| "        <span>%(total)s</span> action <span class=\"visuallyhidden\">monitored in %(plan.name)s</span>\n"
+#| "    "
+#| msgid_plural ""
+#| "\n"
+#| "        <span>%(total)s</span> actions <span class=\"visuallyhidden\">monitored in %(plan.name)s</span>\n"
+#| "    "
 msgid ""
 "\n"
-"        <span>%(total)s</span> action <span class=\"visuallyhidden\">monitored in %(plan.name)s</span>\n"
+"        <span>%(n)s</span> active action <span class=\"visuallyhidden\">monitored in %(plan.name)s</span>\n"
 "    "
 msgid_plural ""
 "\n"
-"        <span>%(total)s</span> actions <span class=\"visuallyhidden\">monitored in %(plan.name)s</span>\n"
+"        <span>%(n)s</span> active actions <span class=\"visuallyhidden\">monitored in %(plan.name)s</span>\n"
 "    "
 msgstr[0] ""
 "\n"
-"        <span>%(total)s</span> Massnahme <span class=\"visuallyhidden\""
-">überwacht in %(plan.name)s</span>\n"
+"        <span>%(total)s</span> Massnahme <span class=\"visuallyhidden\">überwacht in %(plan.name)s</span>\n"
 "    "
 msgstr[1] ""
 "\n"
-"        <span>%(total)s</span> Massnahmen <span class=\"visuallyhidden\""
-">überwacht in %(plan.name)s</span>\n"
+"        <span>%(total)s</span> Massnahmen <span class=\"visuallyhidden\">überwacht in %(plan.name)s</span>\n"
 "    "
 
 #: actions/wagtail_admin.py
@@ -1935,6 +1938,10 @@ msgstr ""
 
 #: admin_site/models.py
 msgid "OKTA"
+msgstr ""
+
+#: admin_site/models.py
+msgid "ADFS OpenID Connect"
 msgstr ""
 
 #: admin_site/models.py
@@ -3053,9 +3060,7 @@ msgid ""
 "Kind regards,\n"
 "the action plan administrators"
 msgstr ""
-"Wenn Sie Schwierigkeiten bei der Verwendung der Massnahmenplan-"
-"Beobachtungsplattform haben, senden Sie bitte eine E-Mail an die "
-"Administratoren des Massnahmenplans.\n"
+"Wenn Sie Schwierigkeiten bei der Verwendung der Massnahmenplan-Beobachtungsplattform haben, senden Sie bitte eine E-Mail an die Administratoren des Massnahmenplans.\n"
 "\n"
 "Vielen Dank, dass Sie sich an der Umsetzung des Massnahmenplans beteiligen!\n"
 "\n"
