--- a/locale/es_US/LC_MESSAGES/django.po
+++ b/locale/es_US/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2024-01-17 16:15+0100\n"
+"POT-Creation-Date: 2024-01-19 10:28+0100\n"
 "PO-Revision-Date: 2023-10-25 12:21+0000\n"
 "Last-Translator: Timo Tuominen <timo.tuominen@kausal.tech>\n"
 "Language-Team: Spanish (American) <https://weblate.kausal.tech/projects/watch/django/es_US/>\n"
@@ -1745,11 +1745,11 @@ msgstr ""
 #, python-format
 msgid ""
 "\n"
-"        <span>%(total)s</span> action <span class=\"visuallyhidden\">monitored in %(plan.name)s</span>\n"
+"        <span>%(n)s</span> active action <span class=\"visuallyhidden\">monitored in %(plan.name)s</span>\n"
 "    "
 msgid_plural ""
 "\n"
-"        <span>%(total)s</span> actions <span class=\"visuallyhidden\">monitored in %(plan.name)s</span>\n"
+"        <span>%(n)s</span> active actions <span class=\"visuallyhidden\">monitored in %(plan.name)s</span>\n"
 "    "
 msgstr[0] ""
 msgstr[1] ""
@@ -1921,6 +1921,10 @@ msgstr ""
 
 #: admin_site/models.py
 msgid "OKTA"
+msgstr ""
+
+#: admin_site/models.py
+msgid "ADFS OpenID Connect"
 msgstr ""
 
 #: admin_site/models.py
